libs/node/test/data/SMSHOME2/good/includes/recursive_include.h
# test includeonce with a recursive include
%includeonce <recursive_include.h>
