libs/node/test/data/SMSHOME2/bad/includes/b.h
# b.h
%include <d.h>
%include <e.h>
